lintian (1.23.39) UNRELEASED; urgency=low

  * checks/fields:
    + [RA] Python documentation packages should still be in section doc.
      Thanks, Michal Čihař.  (Closes: #454688)
    + [RA] Warn about lib.*-dev packages not in section libdevel.
    + [RA] Warn about debug packages that aren't priority: extra.  Thanks,
      Joerg Jaspert.  (Closes: #454358)

 -- Russ Allbery <rra@debian.org>  Thu, 06 Dec 2007 20:24:55 -0800

lintian (1.23.38) unstable; urgency=low

  * The "HE's brown paper bag bug" release

  * checks/changelog-file:
    + [RA] Don't warn about version numbers going backwards in the
      changelog file if the comment says this is a backport.
  * checks/patch-systems:
    + [FL] Try appending .dpatch to patchnames found in 00list.
           Patch by Leo Antunes. (Closes: #454516, #454518)
  
  * lib/Dep.pm:
    + [FL] Fix "uninitialized value" warning in pred_implies().

 -- Russ Allbery <rra@debian.org>  Wed, 05 Dec 2007 17:21:44 -0800

lintian (1.23.37) unstable; urgency=low

  The "Policy 3.7.3" release.

  * checks/binaries:
    + [HE] Fix RegEx to re-enable 'binary-in-etc' and
           'arch-dependent-file-in-usr-share' checks. (Closes: #452336)
    + [HE] When checking that a lib is linked against libc, search for
           libc.so, not any library beginning with libc. Thanks for
           the bug and patch to Ruben Porras <nahoo82@gmail.com>. (Closes:
           #448652)
    + [RA] Ignore the gf suffix from the gfortran migration when checking
      whether the package name matches the SONAME.  Thanks, Kevin
      B. McCarty.  (Closes: #448207)
  * checks/changelog-file{.desc,}:
    + [RA] Check that the latest changelog entry has a later version than
      the previous entry.  Thanks, Thijs Kinkhorst.  (Closes: #449257)
  * checks/common_data.pm:
    + [RA] Add Dm-Upload-Allowed as a control field.  (Closes: #453779)
  * checks/control-file{.desc,}:
    + [RA] Diagnose stronger dependencies that imply weaker dependencies,