@@ -27,8 +27,8 @@ binary-correct:
 	chmod a-x debian/libbaz2/usr/lib/*
 	
 	# General stuff that is tested in other testsets:
-	dh_installdocs -plibbaz2 -plibbaz2-dev
-	dh_compress -plibbaz2 -plibbaz2-dev
+	dh_installdocs -plibbaz2 -plibbaz2-dev -plibbaz2-dbg
+	dh_compress -plibbaz2 -plibbaz2-dev -plibbaz2-dbg
 
 	# Mess up the libbaz2 changelog files to test the symlink handling.
 	ln -s /usr/share/doc/lintian/changelog.gz \
@@ -38,15 +38,15 @@ binary-correct:
 	ln -s foo debian/libbaz2-dev/usr/share/doc/libbaz2-dev/changelog
 
 	# Okay, if either line is omitted, it should be noted
-	dh_strip -plibbaz2 -plibbaz2-dev
-	dh_makeshlibs -plibbaz2 -plibbaz2-dev
-	dh_shlibdeps -plibbaz2 -plibbaz2-dev
+	dh_strip --dbg-package=libbaz2-dbg -plibbaz2 -plibbaz2-dev
+	dh_makeshlibs -plibbaz2 -plibbaz2-dev -plibbaz2-dbg
+	dh_shlibdeps -plibbaz2 -plibbaz2-dev -plibbaz2-dbg
 
 	# and again, regular packaging stuff
-	dh_installdeb -plibbaz2 -plibbaz2-dev
+	dh_installdeb -plibbaz2 -plibbaz2-dev -plibbaz2-dbg
 	echo udeb: libbaz2 1.0 libbaz2 >> debian/libbaz2/DEBIAN/shlibs
-	dh_gencontrol -plibbaz2 -plibbaz2-dev
-	dh_builddeb -plibbaz2 -plibbaz2-dev
+	dh_gencontrol -plibbaz2 -plibbaz2-dev -plibbaz2-dbg
+	dh_builddeb -plibbaz2 -plibbaz2-dev -plibbaz2-dbg
 
 # and the incorrect one
 binary-arch: build binary-correct
