@@ -14,15 +14,16 @@ E: libbaz1: shlib-with-non-pic-code usr/lib/libbaz3.so.1.0.3b
 E: libbaz1: unstripped-binary-or-object ./usr/lib/libbaz1.so.1.0.3b
 E: libbaz1: unstripped-binary-or-object ./usr/lib/libbaz3.so.1.0.3b
 E: libbaz1: unstripped-binary-or-object ./usr/lib/libfoo2.so.1.0.3b
-E: libbaz2: postinst-must-call-ldconfig usr/lib/libbaz2.so.1.0.3b
+E: libbaz2-dbg: changelog-file-missing-in-native-package
+I: libbaz source: package-lacks-versioned-build-depends-on-debhelper 5
 I: libbaz1: no-md5sums-control-file
 I: libbaz1: several-sonames-in-same-package libbaz2.so.1.0 libbaz3.so.1
+I: libbaz2-dbg: no-md5sums-control-file
 I: libbaz2-dev: no-md5sums-control-file
 I: libbaz2: no-md5sums-control-file
 N: libbaz_1.dsc overrode 4 warnings
 W: libbaz source: ancient-standards-version 3.2.1 (current is 3.7.3)
 W: libbaz source: changelog-should-mention-nmu
-W: libbaz source: package-uses-deprecated-debhelper-compat-version 1
 W: libbaz source: source-nmu-has-incorrect-version-number 1
 W: libbaz source: substvar-source-version-is-deprecated libbaz2-dev
 W: libbaz1-dev: dev-package-should-be-section-libdevel libbaz1-dev
@@ -38,6 +39,7 @@ W: libbaz1: unused-shlib-entry-in-control-file libbaz5 1
 W: libbaz1: unused-shlib-entry-in-control-file libdoesntexist2 1.0
 W: libbaz1: unused-shlib-entry-in-control-file udeb: libdoesntexist2 1.0
 W: libbaz1: zero-byte-file-in-doc-directory usr/share/doc/README.Debian
+W: libbaz2-dbg: debug-package-should-be-priority-extra libbaz2-dbg
 W: libbaz2-dev: changelog-file-not-compressed changelog
 W: libbaz2-dev: dev-package-should-be-section-libdevel libbaz2-dev
 W: libbaz2: debian-changelog-file-is-a-symlink
